# Nvidia-Partner-Labs

./: .env.example  .gitignore  CHANGELOG.md  README.md  Taskfile.yml  conftest.py  pyproject.toml
decks/: agents-and-orchestration.pptx  gpu-architecture-for-inference.pptx  mlops-and-platform.pptx  nim-deployment-troubleshooting.pptx  rag-fundamentals.pptx  rag-reranking.pptx
docs/: concepts-plain-english.docx  pre-reading.md
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.staging.yaml  Pulumi.yaml  __main__.py  config.py  pyproject.toml
infra/components/: __init__.py  monitoring.py  networking.py  nim_cluster.py  vector_store.py
infra/scripts/: export_env.py
labs/00-setup/: README.md
labs/00-setup/tests/: test_setup.py
labs/01-rag-fundamentals/: README.md  build_lab.py  conftest.py  lab.ipynb
labs/01-rag-fundamentals/data/: corpus.json  eval.json  generate.py
labs/01-rag-fundamentals/tests/: test_lab.py
labs/02-rag-reranking/: README.md  build_lab.py  conftest.py  lab.ipynb
labs/02-rag-reranking/data/: corpus.json  eval.json  generate.py
labs/02-rag-reranking/tests/: test_lab.py
labs/03-nim-deployment/: README.md  build_lab.py  conftest.py  lab.ipynb
labs/03-nim-deployment/data/: cache_manifest.json  deployment.json  generate.py  profiles.json
labs/03-nim-deployment/tests/: test_lab.py
labs/04-gpu-architecture/: README.md  build_lab.py  conftest.py  lab.ipynb
labs/04-gpu-architecture/data/: generate.py  gpus.json  models.json  workloads.json
labs/04-gpu-architecture/tests/: test_lab.py
labs/05-agents-orchestration/: README.md  build_lab.py  conftest.py  lab.ipynb
labs/05-agents-orchestration/data/: adversarial.json  backend.json  generate.py  tickets.json
labs/05-agents-orchestration/tests/: test_lab.py
labs/06-mlops-platform/: README.md  build_lab.py  conftest.py  lab.ipynb
labs/06-mlops-platform/data/: eval_runs.json  generate.py  metrics.json  metrics_raw.txt
labs/06-mlops-platform/tests/: test_lab.py
nemoclaw/: README.md  __init__.py  scenarios.py
nemoclaw/agent/: nemoclaw.yml  pyproject.toml
nemoclaw/diagnostics/: __init__.py  fixtures.py  lab0102_rag.py  lab03_nim.py  lab04_gpu.py  lab05_agents.py  lab06_mlops.py
nemoclaw/server/: __init__.py  __main__.py
nemoclaw/tests/: test_tools.py
shared/: __init__.py  agent_sim.py  mock_nim.py  nim_client.py  utils.py  vector_store.py
solutions/01-rag-fundamentals/: lab.ipynb
solutions/02-rag-reranking/: lab.ipynb
solutions/03-nim-deployment/: lab.ipynb
solutions/04-gpu-architecture/: lab.ipynb
solutions/05-agents-orchestration/: lab.ipynb
solutions/06-mlops-platform/: lab.ipynb
